docs: Add API authentication config to env example
- Add VALID_API_KEYS for multi-key support
- Add NODE_ENV for development bypass
- Document API key format (ghpk_<org>_<random>)
- Security best practices notes

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # Copy this file to .env and fill in your real values
 # NEVER commit .env to git
 
+# ========================================
+# HEDERA CONFIGURATION
+# ========================================
+
 # Your Hedera testnet operator account
 HEDERA_OPERATOR_ID=0.0.6255927
 
@@ -17,3 +21,26 @@ REC_TOKEN_ID=0.0.7964264
 
 # Grid emission factor (tCO2/MWh) — India CEA default
 EF_GRID=0.8
+
+# ========================================
+# API AUTHENTICATION (NEW)
+# ========================================
+
+# Comma-separated list of valid API keys
+# Format: ghpk_<org_id>_<random_hex>
+# Generate using: node -e "console.log(require('./src/middleware/auth').generateAPIKey('ORG001'))"
+VALID_API_KEYS=ghpk_pilot_plant_001,ghpk_demo_plant_002,ghpk_test_plant_003
+
+# Node environment (development/production)
+# In development mode, API auth is bypassed if no keys configured
+NODE_ENV=development
+
+# ========================================
+# SECURITY BEST PRACTICES
+# ========================================
+# 1. Store API keys in secure vault (AWS Secrets Manager, HashiCorp Vault)
+# 2. Rotate keys quarterly
+# 3. Use database with hashed keys in production (see src/middleware/auth.js)
+# 4. Enable rate limiting in production
+# 5. Use HTTPS/TLS for all API traffic
+# 6. Never log or expose API keys in responses
