--- a/.env.example
+++ b/.env.example
@@ -1,46 +1,20 @@
-# Hedera Hydropower MRV — Environment Variables
-# Copy this file to .env and fill in your real values
-# NEVER commit .env to git
-
-# ========================================
-# HEDERA CONFIGURATION
-# ========================================
-
-# Your Hedera testnet operator account
+# Hedera Network Configuration
+HEDERA_NETWORK=testnet
 HEDERA_OPERATOR_ID=0.0.6255927
+HEDERA_OPERATOR_KEY=YOUR_OPERATOR_KEY_HERE
 
-# ECDSA secp256k1 private key (DER hex format starting 3030...)
-# Generate at: https://portal.hedera.com
-HEDERA_OPERATOR_KEY=YOUR_PRIVATE_KEY_HERE
-
-# HCS Topic ID for audit log
+# HCS Topic and Token IDs
 AUDIT_TOPIC_ID=0.0.7462776
-
-# HREC Token ID (Hedera Token Service)
 REC_TOKEN_ID=0.0.7964264
 
-# Grid emission factor (tCO2/MWh) — India CEA default
-EF_GRID=0.8
+# Plant Configuration
+PLANT_ID=PLANT-HP-001
+DEVICE_ID=TURBINE-001
+EF_GRID=0.82
 
-# ========================================
-# API AUTHENTICATION (NEW)
-# ========================================
+# API Authentication
+VALID_API_KEYS=ghpk_demo_key_001,ghpk_demo_key_002
 
-# Comma-separated list of valid API keys
-# Format: ghpk_<org_id>_<random_hex>
-# Generate using: node -e "console.log(require('./src/middleware/auth').generateAPIKey('ORG001'))"
-VALID_API_KEYS=ghpk_pilot_plant_001,ghpk_demo_plant_002,ghpk_test_plant_003
-
-# Node environment (development/production)
-# In development mode, API auth is bypassed if no keys configured
-NODE_ENV=development
-
-# ========================================
-# SECURITY BEST PRACTICES
-# ========================================
-# 1. Store API keys in secure vault (AWS Secrets Manager, HashiCorp Vault)
-# 2. Rotate keys quarterly
-# 3. Use database with hashed keys in production (see src/middleware/auth.js)
-# 4. Enable rate limiting in production
-# 5. Use HTTPS/TLS for all API traffic
-# 6. Never log or expose API keys in responses
+# Monitoring
+PORT=3000
+LOG_LEVEL=info
