feat: add production .env template with all secrets
**Production environment template:**
- Hedera testnet/mainnet credentials
- Database connection strings
- Redis configuration
- API keys for carbon marketplaces
- JWT secrets for authentication
- Monitoring endpoints

**Security:**
- All sensitive values use placeholders
- Comments explain each variable
- Separate dev/prod configs

**Usage:**
```bash
cp .env.example .env
# Edit .env with real credentials
# Never commit .env to git!
```

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,99 @@
-# Hedera Network Configuration
-HEDERA_NETWORK=testnet
-HEDERA_OPERATOR_ID=0.0.6255927
-HEDERA_OPERATOR_KEY=YOUR_OPERATOR_KEY_HERE
+# ═════════════════════════════════════════════════════════════════
+# Hedera Hydropower MRV - Production Environment
+# ═════════════════════════════════════════════════════════════════
+# Copy this file to .env and fill in real values
+# WARNING: Never commit .env to git!
 
-# HCS Topic and Token IDs
-AUDIT_TOPIC_ID=0.0.7462776
-REC_TOKEN_ID=0.0.7964264
+# ─────────────────────────────────────────────────────────────────
+# Application
+# ─────────────────────────────────────────────────────────────────
+NODE_ENV=production
+PORT=3000
 
-# Plant Configuration
-PLANT_ID=PLANT-HP-001
-DEVICE_ID=TURBINE-001
+# ─────────────────────────────────────────────────────────────────
+# Hedera Network
+# ─────────────────────────────────────────────────────────────────
+# Get from: https://portal.hedera.com/
+# Testnet for development, Mainnet for production
+HEDERA_NETWORK=testnet  # or 'mainnet'
+HEDERA_ACCOUNT_ID=0.0.XXXXX
+HEDERA_PRIVATE_KEY=302e020100300506032b6570042204...
+
+# HCS Topic IDs
+AUDIT_TOPIC_ID=0.0.XXXXX       # Main audit log topic
+ML_MODEL_TOPIC_ID=0.0.XXXXX    # ML model hash publishing
+
+# ─────────────────────────────────────────────────────────────────
+# Database
+# ─────────────────────────────────────────────────────────────────
+# PostgreSQL connection string
+DATABASE_URL=postgresql://username:password@localhost:5432/hedera_mrv
+
+# Redis for caching and rate limiting
+REDIS_URL=redis://localhost:6379
+
+# ─────────────────────────────────────────────────────────────────
+# Security
+# ─────────────────────────────────────────────────────────────────
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=your-256-bit-secret-key-here
+JWT_EXPIRES_IN=7d
+
+# API Key for device authentication
+API_KEY_SALT=your-random-salt-here
+
+# ─────────────────────────────────────────────────────────────────
+# Carbon Credits
+# ─────────────────────────────────────────────────────────────────
+# Grid emission factor (tCO2/MWh) - India average
 EF_GRID=0.82
 
-# API Authentication
-VALID_API_KEYS=ghpk_demo_key_001,ghpk_demo_key_002
+# Carbon marketplace API keys
+VERRA_API_KEY=your-verra-api-key
+GOLD_STANDARD_API_KEY=your-gold-standard-key
 
-# Monitoring
-PORT=3000
-LOG_LEVEL=info
+# ─────────────────────────────────────────────────────────────────
+# Monitoring & Alerting
+# ─────────────────────────────────────────────────────────────────
+# Slack webhook for alerts
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+
+# Email alerts
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+ALERT_EMAIL=alerts@yourcompany.com
+
+# Sentry for error tracking
+SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
+
+# ─────────────────────────────────────────────────────────────────
+# ML Configuration
+# ─────────────────────────────────────────────────────────────────
+# Model drift detection threshold (p-value)
+ML_DRIFT_THRESHOLD=0.05
+
+# Auto-retrain when drift detected
+ML_AUTO_RETRAIN=true
+
+# Minimum samples for retraining
+ML_RETRAIN_MIN_SAMPLES=1000
+
+# ─────────────────────────────────────────────────────────────────
+# Rate Limiting
+# ─────────────────────────────────────────────────────────────────
+RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
+RATE_LIMIT_MAX_REQUESTS=100   # per window per IP
+
+# ─────────────────────────────────────────────────────────────────
+# CORS
+# ─────────────────────────────────────────────────────────────────
+CORS_ORIGIN=https://yourdashboard.com,https://yourinvestordashboard.com
+
+# ─────────────────────────────────────────────────────────────────
+# Localization
+# ─────────────────────────────────────────────────────────────────
+DEFAULT_LANGUAGE=en  # en, hi, ta, te
+DEFAULT_TIMEZONE=Asia/Kolkata
+DEFAULT_CURRENCY=INR
