--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,18 @@
-{
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/api/index" }
-  ]
+﻿{
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/api/server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/api/server.js"
+    }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
