fix: add CI env var and improve test workflow reliability

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,31 +43,35 @@ jobs:
       run: mkdir -p ml/data
 
     - name: Train ML model (monsoon-aware)
-      run: npm run ml:train
+      run: npm run ml:train || echo "⚠️ ML training failed, using backup model"
       continue-on-error: true
 
     - name: Check if ML model exists
       run: |
         if [ -f "ml/model.json" ]; then
-          echo "✅ ML model trained successfully"
+          echo "✅ ML model exists"
+          ls -lh ml/model.json
         else
-          echo "⚠️ ML model not found, tests may be limited"
+          echo "⚠️ ML model not found"
         fi
 
     - name: Run all tests
-      run: npm test -- --forceExit --testTimeout=30000
+      run: npm test -- --forceExit --testTimeout=30000 --maxWorkers=2
       env:
         NODE_ENV: test
-        # Skip tests that require real Hedera credentials
-        SKIP_INTEGRATION: true
-      continue-on-error: true
+        CI: true
+      continue-on-error: false
 
     - name: Test Summary
       if: always()
       run: |
         echo "## Test Results" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "**Status:** Tests completed" >> $GITHUB_STEP_SUMMARY
+        if [ $? -eq 0 ]; then
+          echo "✅ **Status:** Tests passed" >> $GITHUB_STEP_SUMMARY
+        else
+          echo "⚠️ **Status:** Tests completed with issues" >> $GITHUB_STEP_SUMMARY
+        fi
         echo "**Node Version:** ${{ matrix.node-version }}" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "⚠️ Note: Some tests may be skipped in CI environment due to missing credentials" >> $GITHUB_STEP_SUMMARY
+        echo "🔧 **Note:** Integration tests with real Hedera network are mocked in CI" >> $GITHUB_STEP_SUMMARY
