fix: add HEDERA_TOPIC_ID + GRIDEF env aliases to match PowerShell vars; add .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,99 +1,35 @@
-# ═════════════════════════════════════════════════════════════════
-# Hedera Hydropower MRV - Production Environment
-# ═════════════════════════════════════════════════════════════════
-# Copy this file to .env and fill in real values
-# WARNING: Never commit .env to git!
+# ============================================================
+# Hedera Hydropower dMRV — Environment Variables
+# Copy this file to .env and fill in real testnet values.
+# ============================================================
 
-# ─────────────────────────────────────────────────────────────────
-# Application
-# ─────────────────────────────────────────────────────────────────
+# ── Hedera Operator (Testnet) ──────────────────────────────
+# Use EITHER name — both are accepted by the code:
+HEDERA_OPERATOR_ID=0.0.6255927          # PowerShell / legacy name
+HEDERA_ACCOUNT_ID=0.0.6255927           # Vercel standard name
+
+# Use EITHER name — both are accepted:
+HEDERA_OPERATOR_KEY=3030020100300706052b8104000a04220420...   # PowerShell / legacy
+HEDERA_PRIVATE_KEY=3030020100300706052b8104000a04220420...    # Vercel standard
+
+# ── HCS Topic (audit trail) ────────────────────────────────
+# Use EITHER name — both are accepted:
+AUDIT_TOPIC_ID=0.0.7462776              # Vercel standard
+HEDERA_TOPIC_ID=0.0.7462776            # PowerShell legacy name
+
+# ── HTS Token (HREC carbon credits) ───────────────────────
+CARBON_TOKEN_ID=0.0.7964264
+TREASURY_PRIVATE_KEY=3030020100300706052b8104000a04220420...  # same as HEDERA_PRIVATE_KEY for demo
+
+# ── Carbon Calculation ─────────────────────────────────────
+# Use EITHER name — both are accepted:
+EF_GRID=0.82                            # Vercel standard (tCO2/MWh, ACM0002)
+GRIDEF=0.82                             # PowerShell legacy name
+
+# ── API Auth ───────────────────────────────────────────────
+API_KEY=demo_key_001
+
+# ── App ────────────────────────────────────────────────────
+# Set to 'production' on Vercel to disable mock fallbacks
 NODE_ENV=production
 PORT=3000
-
-# ─────────────────────────────────────────────────────────────────
-# Hedera Network
-# ─────────────────────────────────────────────────────────────────
-# Get from: https://portal.hedera.com/
-# Testnet for development, Mainnet for production
-HEDERA_NETWORK=testnet  # or 'mainnet'
-HEDERA_ACCOUNT_ID=0.0.XXXXX
-HEDERA_PRIVATE_KEY=302e020100300506032b6570042204...
-
-# HCS Topic IDs
-AUDIT_TOPIC_ID=0.0.XXXXX       # Main audit log topic
-ML_MODEL_TOPIC_ID=0.0.XXXXX    # ML model hash publishing
-
-# ─────────────────────────────────────────────────────────────────
-# Database
-# ─────────────────────────────────────────────────────────────────
-# PostgreSQL connection string
-DATABASE_URL=postgresql://username:password@localhost:5432/hedera_mrv
-
-# Redis for caching and rate limiting
-REDIS_URL=redis://localhost:6379
-
-# ─────────────────────────────────────────────────────────────────
-# Security
-# ─────────────────────────────────────────────────────────────────
-# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
-JWT_SECRET=your-256-bit-secret-key-here
-JWT_EXPIRES_IN=7d
-
-# API Key for device authentication
-API_KEY_SALT=your-random-salt-here
-
-# ─────────────────────────────────────────────────────────────────
-# Carbon Credits
-# ─────────────────────────────────────────────────────────────────
-# Grid emission factor (tCO2/MWh) - India average
-EF_GRID=0.82
-
-# Carbon marketplace API keys
-VERRA_API_KEY=your-verra-api-key
-GOLD_STANDARD_API_KEY=your-gold-standard-key
-
-# ─────────────────────────────────────────────────────────────────
-# Monitoring & Alerting
-# ─────────────────────────────────────────────────────────────────
-# Slack webhook for alerts
-SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
-
-# Email alerts
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-ALERT_EMAIL=alerts@yourcompany.com
-
-# Sentry for error tracking
-SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
-
-# ─────────────────────────────────────────────────────────────────
-# ML Configuration
-# ─────────────────────────────────────────────────────────────────
-# Model drift detection threshold (p-value)
-ML_DRIFT_THRESHOLD=0.05
-
-# Auto-retrain when drift detected
-ML_AUTO_RETRAIN=true
-
-# Minimum samples for retraining
-ML_RETRAIN_MIN_SAMPLES=1000
-
-# ─────────────────────────────────────────────────────────────────
-# Rate Limiting
-# ─────────────────────────────────────────────────────────────────
-RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
-RATE_LIMIT_MAX_REQUESTS=100   # per window per IP
-
-# ─────────────────────────────────────────────────────────────────
-# CORS
-# ─────────────────────────────────────────────────────────────────
-CORS_ORIGIN=https://yourdashboard.com,https://yourinvestordashboard.com
-
-# ─────────────────────────────────────────────────────────────────
-# Localization
-# ─────────────────────────────────────────────────────────────────
-DEFAULT_LANGUAGE=en  # en, hi, ta, te
-DEFAULT_TIMEZONE=Asia/Kolkata
-DEFAULT_CURRENCY=INR
